--- a/kubernetes/deploy.yaml
+++ b/kubernetes/deploy.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: delivery
-          image: myeventstormingregistry.azurecr.io/delivery
+          image: admin9.azurecr.io/delivery
           ports:
             - containerPort: 8080
